# Sync

./: .gitignore
BikeTracker/app/src/main/java/com/chds/biketracker/: Tracker.kt
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/chds/airsync/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/chds/airsync/: MainActivity.kt  Network.kt  NetworkDiscovery.kt  Storage.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/chds/airsync/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
native/: Build_All.bat  Build_Linux.bat  Build_Windows.bat  CMakeLists.txt  CMakeSettings.json  Plans  cleanLnx.sh  linux_pipeline.cmake  lnx.sh  win.bat
native/src/: BroadcastServer.cpp  BroadcastServer.cpp~  BroadcastServer.h  BroadcastServer.h~  CompositeServer.cpp  CompositeServer.cpp~  CompositeServer.h  Error.h  Error.h~  HashMap.h  HashMap.h~  MsgBackend.cpp  MsgBackend.cpp~  MsgBackend.h  MsgBackend.h~  Server.cpp  Server.cpp~  Server.h  Server.h~  Stream.cpp  Stream.cpp~  Stream.h  Stream.h~  Types.h  Types.h~  main.cpp  main.cpp~
native/src/sync/: Address.h  Backend.cpp  Backend.h  BackupFeature.cpp  BackupFeature.h  Buffer.cpp  Buffer.h  Compatability.h  ESP8266Datagram.cpp  ESP8266Stream.cpp  LiveDatagram.cpp  LiveStream.cpp  Log.cpp  Log.h  Pool.cpp  Pool.h  TestFeature.cpp  TestFeature.h
native/src_main/: main.cpp~
